testing and all implementation

--- a/config-templates/netapp/netapp-ontap-san/21.04/deployment.yaml
+++ b/config-templates/netapp/netapp-ontap-san/21.04/deployment.yaml
@@ -42,7 +42,7 @@ items:
                   - name: MGMT_LIF
                     value: "{{{ managementLIF }}}"
                   - name: DATA_LIF
-                    value: "{{{ dataLIF }}}"
+                    value: "{{ dataLIF }}}"
                   - name: SVM_Name
                     value: "{{{ svm }}}"
                   - name: USER_Name
