--- a/config-templates/netapp/netapp-ontap-san/21.04/storage-class-template.yaml
+++ b/config-templates/netapp/netapp-ontap-san/21.04/storage-class-template.yaml
@@ -16,5 +16,5 @@ parameters:
   backendType: "ontap-san"
   selector: "{{ selector }}"
   fsType: "{{ fsType }}"
-allowVolumeExpansion: {{ allowVolumeExpansion }}
+allowVolumeExpansion: { allowVolumeExpansion }}
 volumeBindingMode: "{{ volumeBindingMode }}"
