everything working fine

--- a/RESULTS/netapp-ontap-nas_22.04.json
+++ b/RESULTS/netapp-ontap-nas_22.04.json
@@ -1,6 +1,7 @@
 {
 	"driverName": "netapp-ontap-nas",
 	"driverVersion": "22.04",
+	"driverPath": "./config-templates/netapp/netapp-ontap-nas/22.04/",
 	"warnings": null,
 	"errors": null
 }
